frontend part1: tests

--- a/Web/style.css
+++ b/Web/style.css
@@ -2,11 +2,82 @@ body {
     margin: 0;
     padding: 0;
     font-size: 18px;
-    color: var(--tg-theme-text-color);
-    background: var(--tg-theme-bg-color);
+    font-family: Arial, sans-serif;
+}
+
+nav {
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+
+.experience-bar { /* Шкала опыта*/
+    position: relative;
+    width: 60%;
+    height: 20px;
+    background-color: #181456;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.experience-level { /* Текст у лвла */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 14px;
+    color: #ffffff;
+}
+
+.experience-fill { /* заполенение шкалы опыта*/
+    height: 100%;
+    border-radius: 10px;
+    background-color: #3d32d2;
+    width: 70%; /* Пример: заполнено на 60% */
 }
 
 .container {
+    width: 100%;
+    height: 100%;
+    --s: 84px;
+    --c1: #533a80;
+    --c2: #301559;
+    --c3: #1e0842;
+
+    --_g: 0 120deg, #0000 0;
+    background: conic-gradient(
+            from 0deg at calc(500% / 6) calc(100% / 3),
+            var(--c3) var(--_g)
+    ),
+    conic-gradient(
+            from -120deg at calc(100% / 6) calc(100% / 3),
+            var(--c2) var(--_g)
+    ),
+    conic-gradient(
+            from 120deg at calc(100% / 3) calc(500% / 6),
+            var(--c1) var(--_g)
+    ),
+    conic-gradient(
+            from 120deg at calc(200% / 3) calc(500% / 6),
+            var(--c1) var(--_g)
+    ),
+    conic-gradient(
+            from -180deg at calc(100% / 3) 50%,
+            var(--c2) 60deg,
+            var(--c1) var(--_g)
+    ),
+    conic-gradient(
+            from 60deg at calc(200% / 3) 50%,
+            var(--c1) 60deg,
+            var(--c3) var(--_g)
+    ),
+    conic-gradient(
+            from -60deg at 50% calc(100% / 3),
+            var(--c1) 120deg,
+            var(--c2) 0 240deg,
+            var(--c3) 0
+    );
+    background-size: calc(var(--s) * 1.732) var(--s);
     max-width: 290px;
 }
 
@@ -28,7 +99,7 @@ body {
     display: inline-block;
     padding: 10px 20px;
     border: none;
-    background: #75d6ff;
+    background: #127ba9;
     border-radius: 10px;
     color: #fff;
     text-transform: uppercase;
@@ -38,7 +109,7 @@ body {
 }
 
 .btn:hover {
-    background: lightgreen;
+    background: #8e37c7;
 }
 
 .usercard {
@@ -58,7 +129,7 @@ body {
     outline: none;
     box-shadow: none;
     border: none;
-    color: #23242a;
+    color: #ffffff;
     font-size: 1em;
     letter-spacing: 0.05em;
     transition: 0.5s;
@@ -70,17 +141,17 @@ body {
     left: 0;
     padding: 20px 10px 10px;
     font-size: 1em;
-    color: #8f8f8f;
+    color: #ffffff;
     letter-spacing: 00.05em;
     transition: 0.3s;
     pointer-events: none;
 }
 
-.inputbox input:valid ~span,
-.inputbox input:focus ~span {
-    color: #45f3ff;
-    transform: translateX(-10px) translateY(-104px);
-    font-size: 0.6em;
+.inputbox input:valid ~ span,
+.inputbox input:focus ~ span {
+    color: #ffffff;
+    transform: translateX(-10px) translateY(-84px);
+    font-size: 0.75em;
 }
 
 .inputbox i {
@@ -89,14 +160,14 @@ body {
     bottom: 0;
     width: 100%;
     height: 2px;
-    background: #45f3ff;
+    background: #127ba9;
     border-radius: 4px;
     transition: 0.5s;
     pointer-events: none;
     z-index: 9;
 }
 
-.inputbox input:valid ~i,
-.inputbox input:focus ~i {
+.inputbox input:valid ~ i,
+.inputbox input:focus ~ i {
     height: 44px;
 }
