--- a/src/templates/profile_user.html
+++ b/src/templates/profile_user.html
@@ -3,7 +3,7 @@
 
 {% block level %}
 <div class="experience-level">
-    <!--пока заглушка--> Level {{ user_info.xp }}
+    Level {{ user_info.xp }}
 </div>
 {% endblock %}
 
