--- a/src/templates/main_base.html
+++ b/src/templates/main_base.html
@@ -3,51 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/profile_base_style.css">
+    <link rel="stylesheet" href="/static/main_base_style.css">
     <title></title>
 </head>
 <body>
 
 <div class="container">
 
-    <!--Уровень User-->
+
     <nav>
-        <div style="display: inline-block" class="star-icon"></div>
-        <div style="margin-block: 10px;display: inline-block" class="experience-bar">
-            <div class="experience-fill">
-                {% block level %}{% endblock %}
-            </div>
+        <!-- кнопка клуба + кубки кклуба + кликабельно-->
+        <div class="logo-container">
+            <span class="site-name">{% block club_name %}{% endblock %}Клуб</span>
+        </div>
+
+        <div class="image-container" style="display: flex; align-items: center">
+            <span style="display: inline-block; text-align: center; width: calc(100% - 30px); flex-grow: 1;">
+                        {% block exp_club %}{% endblock %}1234
+            </span>
+            <img style="display: inline-block; vertical-align: middle; float: right;" src="/images/exp.png" alt="Иконка">
         </div>
     </nav>
 
 
+    <div style="margin-top: 10px;">
+    </div>
     <div style="display: flex; margin-top: 5px">
-        <!--Аватарка-->
-        <div class="block1" style="margin-top: 20px;">
-            <div id="avatar-container" onclick="uploadAvatar()">
-                <label for="avatar-input">
-                    <div id="avatar-circle">
-                        <span id="choose-text">Вставьте фото</span>
-                        <img id="avatar-image" src="placeholder.jpg" alt="Вставьте фото">
-                    </div>
-                </label>
-                <input type="file" id="avatar-input" accept="image/*"/>
-            </div>
-            {% block name %}{% endblock %}
+
+
+        <!-- Имя, статус + переход в профиль-->
+        <div class="block1" style="margin-top: 20px">
+            <button class="card" style="height: 60px; width: 160px; justify-content: center; vertical-align: center">
+                <h1 id="Name" style="bottom: 5px;font-size: 15px; color: #7a9a8a;position: relative; z-index: 2">
+                    {% block user %}{% endblock %}Имя Фамилия</h1>
+                <h1 id="Status" style="bottom: 5px; font-size: 15px; color: #7a9a8a;position: relative; z-index: 2">
+                    {% block status %}{% endblock %}Участник</h1>
+            </button>
         </div>
 
-        <!--Достижения-->
-        <div class="block2">
-            <div class="card">
-                <div class="card-content" style="margin-left: 20px;padding-top: 50px">
-                    {% block achivements %}{% endblock %}
-                </div>
-            </div>
+
+        <!-- Кнопка "Сменить клуб"-->
+        <div class="block1" style="margin-top: 20px;">
+            <button class="card"
+                    style="left: 30px;height: 60px; width: 160px; justify-content: center; vertical-align: center">
+                <h1 style="bottom: 5px;font-size: 15px; color: #7a9a8a;position: relative; z-index: 2">
+                    Сменить клуб {% block clubs %}{% endblock %}</h1>
+            </button>
         </div>
     </div>
 
+
+    <div style="margin-top: 50px">
+    </div>
+
+    <!-- inline, 3 блока:-->
+    <div class="card"
+         style="left: 10px;height: 120px; width: 370px; justify-content: center; vertical-align: center;display: flex">
+
+
+        <!-- блок 1: магазин, картинка магаза, навожусь, там ссылка, надпись "магазин" (пока нерабочая)-->
+        <div class="block2" style="margin-top: 20px">
+            <button class="card"
+                    style="z-index: 2;height: 80px; width: 115px; justify-content: center; vertical-align: center">
+                <h1 style="bottom: 5px;font-size: 15px; color: #7a9a8a;position: relative; z-index: 2">
+                    Магазин</h1>
+            </button>
+        </div>
+
+
+        <!-- блок 2: деньги, картинка денег, навожусь, вижу, сколько у меня валюты-->
+        <div class="block3" style="margin-top: 20px">
+            <button class="card"
+                    style="z-index: 2;height: 80px; width: 115px; justify-content: center; vertical-align: center">
+                <h1 style="bottom: 5px;font-size: 15px; color: #7a9a8a;position: relative; z-index: 2">
+                    Баланс</h1>
+                <h1 style="bottom: 5px;font-size: 15px; color: #7a9a8a;position: relative; z-index: 2">
+                     {% block money %}{% endblock %}123</h1>
+            </button>
+        </div>
+
+
+        <!-- блок 3: ссылка в канал/чат клуба-->
+        <div class="block4" style="margin-top: 20px">
+            <button class="card"
+                    style="z-index: 2;height: 80px; width: 115px; justify-content: center; vertical-align: center">
+                <h1 style="bottom: 5px;font-size: 15px; color: #7a9a8a;position: relative; z-index: 2">
+                    В канал</h1>
+            </button>
+        </div>
+    </div>
+
+    <div style="margin-top: 80px">
+    </div>
+
+
+    <!-- События-->
+    <div class="card"
+         style="left: 50px;height: 50px; width: 290px; justify-content: center;display: flex">
+        <h1 style="font-size: 20px; color: #7a9a8a;position: relative; z-index: 2">СОБЫТИЯ</h1>
+    </div>
+
+
+    <!--Далее перечисление событий-->
+    {% block content %}{% endblock %}
 </div>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
-<script src="/static/profile_base_script.js"></script>
+<script src="/static/main_base_script.js"></script>
 </body>
 </html>
