--- a/src/templates/main_user.html
+++ b/src/templates/main_user.html
@@ -1,85 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/profile_base_style.css">
-    <title></title>
-</head>
-<body>
-
-<div class="container">
-
-    <!--Уровень User-->
-    <nav>
-        <div style="display: inline-block" class="star-icon"></div>
-        <div style="margin-block: 10px;display: inline-block" class="experience-bar">
-            <div class="experience-fill">
-                {% block level %}{% endblock %}
-            </div>
-        </div>
-    </nav>
+{% extends "main_base.html" %}
 
 
-    <div style="display: flex; margin-top: 5px">
-        <!--Аватарка-->
-        <div class="block1" style="margin-top: 20px;">
-            <div id="avatar-container" onclick="uploadAvatar()">
-                <label for="avatar-input">
-                    <div id="avatar-circle">
-                        <span id="choose-text">Вставьте фото</span>
-                        <img id="avatar-image" src="placeholder.jpg" alt="Вставьте фото">
-                    </div>
-                </label>
-                <input type="file" id="avatar-input" accept="image/*"/>
-            </div>
-            {% block name %}{% endblock %}
-        </div>
-
-        <!--Достижения-->
-        <div class="block2">
-            <div class="card">
-                <div class="card-content" style="margin-left: 20px;padding-top: 50px">
-                    {% block achivements %}{% endblock %}
-                </div>
-            </div>
-        </div>
-    </div>
+{% block club_name %}
+{{ club_info.name }}
+{% endblock %}
 
 
-    <!--Инфа о user в виде формочки-->
-    <div class="form-container" style="margin-top: 30px">
-        <form class="form">
-            <div style="display: flex">
-                {% block dob %}{% endblock %}
-                {% block City %}{% endblock %}
-            </div>
-            {% block Education %}{% endblock %}
-            {% block UserInfo %}{% endblock %}
-            <button type="submit" class="editBtn">Изменить</button>
-            <script>
-                /*TODO как писать кнопку изменить?*/
-            </script>
-        </form>
-    </div>
-
-    <!-- Кнопка "На главную" -->
-    <div style="bottom: 40px">
-        <button class="btn_GoToTheClub" type="button" style="margin-top: 40px">
-            <strong>На главную</strong>
-            <div id="container-stars">
-                <div id="stars"></div>
-            </div>
-            <div id="glow">
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-        </button>
-    </div>
+{% block exp_club %}
+{{ club_info.exp }}
+{% endblock %}
 
 
-</div>
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
-<script src="/static/profile_base_script.js"></script>
-</body>
-</html>
+{% block user %}
+{{ user_info.name }} {{ user_info.surname }}
+{% endblock %}
+
+
+{% block status %}
+{{ user_x_club_info.role }}
+{% endblock %}
+
+
+{% block clubs %}
+<!--позже будет окно с различными клубами "Сменить клуб"-->
+{% endblock %}
+
+
+{% block money %}
+{{ user_x_club_info.money }}
+{% endblock %}
+
+
+{% block content %}
+{% for event in events %}
+<!--события-->
+{% endfor %}
+{% endblock %}
