get requests for main_user.html

--- a/src/templates/main_base.html
+++ b/src/templates/main_base.html
@@ -17,6 +17,7 @@
             <span class="site-name">{% block club_name %}{% endblock %}Клуб</span>
         </div>
 
+
         <div class="image-container" style="display: flex; align-items: center">
             <span style="display: inline-block; text-align: center; width: calc(100% - 30px); flex-grow: 1;">
                         {% block exp_club %}{% endblock %}1234
@@ -27,8 +28,10 @@
     </nav>
 
 
-    <div style="margin-top: 10px;">
+    <div style="margin-top: 10px">
     </div>
+
+
     <div style="display: flex; margin-top: 5px">
 
 
@@ -56,6 +59,7 @@
 
     <div style="margin-top: 50px">
     </div>
+
 
     <!-- inline, 3 блока:-->
     <div class="card"
@@ -93,6 +97,7 @@
             </button>
         </div>
     </div>
+
 
     <div style="margin-top: 80px">
     </div>
