--- a/src/templates/club_user.html
+++ b/src/templates/club_user.html
@@ -1,85 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/profile_base_style.css">
-    <title></title>
-</head>
-<body>
-
-<div class="container">
-
-    <!--Уровень User-->
-    <nav>
-        <div style="display: inline-block" class="star-icon"></div>
-        <div style="margin-block: 10px;display: inline-block" class="experience-bar">
-            <div class="experience-fill">
-                {% block level %}{% endblock %}
-            </div>
-        </div>
-    </nav>
+{% extends "club_base.html" %}
 
 
-    <div style="display: flex; margin-top: 5px">
-        <!--Аватарка-->
-        <div class="block1" style="margin-top: 20px;">
-            <div id="avatar-container" onclick="uploadAvatar()">
-                <label for="avatar-input">
-                    <div id="avatar-circle">
-                        <span id="choose-text">Вставьте фото</span>
-                        <img id="avatar-image" src="placeholder.jpg" alt="Вставьте фото">
-                    </div>
-                </label>
-                <input type="file" id="avatar-input" accept="image/*"/>
-            </div>
-            {% block name %}{% endblock %}
-        </div>
-
-        <!--Достижения-->
-        <div class="block2">
-            <div class="card">
-                <div class="card-content" style="margin-left: 20px;padding-top: 50px">
-                    {% block achivements %}{% endblock %}
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!--Инфа о user в виде формочки-->
-    <div class="form-container" style="margin-top: 30px">
-        <form class="form">
-            <div style="display: flex">
-                {% block dob %}{% endblock %}
-                {% block City %}{% endblock %}
-            </div>
-            {% block Education %}{% endblock %}
-            {% block UserInfo %}{% endblock %}
-            <button type="submit" class="editBtn">Изменить</button>
-            <script>
-                /*TODO как писать кнопку изменить?*/
-            </script>
-        </form>
-    </div>
-
-    <!-- Кнопка "На главную" -->
-    <div style="bottom: 40px">
-        <button class="btn_GoToTheClub" type="button" style="margin-top: 40px">
-            <strong>На главную</strong>
-            <div id="container-stars">
-                <div id="stars"></div>
-            </div>
-            <div id="glow">
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-        </button>
-    </div>
-
-
+{% block level %}
+<div class="experience-level">
+    Level {{ user_info.xp }}
 </div>
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
-<script src="/static/profile_base_script.js"></script>
-</body>
-</html>
+{% endblock %}
+
+
+{% block name %}
+<h1 id="name" style="margin-left: 12px; font-size: 15px; color: #7a9a8a">
+    {{ user_info.name }} {{ user_info.surname }}
+</h1>
+{% endblock %}
+
+
+{% block achivements %}
+<h1 id="achivements" style=" font-size: 15px; color: #7a9a8a;position: relative; z-index: 2">
+    <!--пока заглушка, TODO скрипт, подсвечивает достижения, которые есть--> Нет достижений
+    {{ user_info.achievments }}
+</h1>
+{% endblock %}
+
+
+{% block dob %}
+<div class="form-group" style="width: 60%">
+    <label for="Date of Birth">День рождения</label>
+    <input required="" name="Date of Birth" id="Date of Birth" type="text" style="width: 115px"
+           value="{{ user_info.dob }}" readonly>
+</div>
+{% endblock %}
+
+
+{% block City %}
+<div class="form-group">
+    <label for="City">Город</label>
+    <input required="" name="City" id="City" type="text" style="width: 125px" value="{{user_info.city}}" readonly>
+</div>
+{% endblock %}
+
+
+{% block Education %}
+<div class="form-group">
+    <label for="Education">Образование</label>
+    <input required="" name="Education" id="Education" type="text" style="width: 280px" value="{{user_info.education}}"
+           readonly>
+</div>
+{% endblock %}
+
+
+{% block UserInfo %}
+<div class="form-group">
+    <label for="textarea">О себе</label>
+    <textarea required="" cols="50" rows="10" id="textarea" name="bio"
+              style="width: 280px; height: 80px" readonly>
+        {{ user_info.bio }}
+    </textarea>
+</div>
+{% endblock %}
