--- a/src/templates/main_user.html
+++ b/src/templates/main_user.html
@@ -7,7 +7,7 @@
 
 
 {% block exp_club %}
-{{ club_info.exp }}
+{{ club_info.xp }}  <!--exp поменял на xp-->
 {% endblock %}
 
 
@@ -27,7 +27,7 @@
 
 
 {% block money %}
-{{ user_x_club_info.money }}
+{{ user_x_club_info.balance }} <!-- money -> balance -->
 {% endblock %}
 
 
