--- a/src/templates/club_base.html
+++ b/src/templates/club_base.html
@@ -62,16 +62,8 @@
 
 
     <!-- Кнопка "На главную" -->
-    <button class="btn_GoToTheClub" type="button" style="margin-top: 20px">
-        <strong>На главную</strong>
-        <div id="container-stars">
-            <div id="stars"></div>
-        </div>
-        <div id="glow">
-            <div class="circle"></div>
-            <div class="circle"></div>
-        </div>
-    </button>
+    {% block href_main %}{% endblock %}
+
 
 
     <div style="margin-top: 40px">
@@ -89,6 +81,26 @@
     <div class="card"
          style="margin-top: 5px;left: 20px;height: 30px; width: 350px; justify-content: center;display: flex">
         <h1 style="font-size: 14px; color: #7a9a8a;position: relative; z-index: 2">Участник1</h1>
+    </div>
+    <!-- Участник 2-->
+    <div class="card"
+         style="margin-top: 5px;left: 20px;height: 30px; width: 350px; justify-content: center;display: flex">
+        <h1 style="font-size: 14px; color: #7a9a8a;position: relative; z-index: 2">Участник2</h1>
+    </div>
+    <!-- Участник 3-->
+    <div class="card"
+         style="margin-top: 5px;left: 20px;height: 30px; width: 350px; justify-content: center;display: flex">
+        <h1 style="font-size: 14px; color: #7a9a8a;position: relative; z-index: 2">Участник3</h1>
+    </div>
+    <!-- Участник 4-->
+    <div class="card"
+         style="margin-top: 5px;left: 20px;height: 30px; width: 350px; justify-content: center;display: flex">
+        <h1 style="font-size: 14px; color: #7a9a8a;position: relative; z-index: 2">Участник4</h1>
+    </div>
+    <!-- Участник 5-->
+    <div class="card"
+         style="margin-top: 5px;left: 20px;height: 30px; width: 350px; justify-content: center;display: flex">
+        <h1 style="font-size: 14px; color: #7a9a8a;position: relative; z-index: 2">Участник5</h1>
     </div>
 
 </div>
