--- a/src/templates/profile_base.html
+++ b/src/templates/profile_base.html
@@ -64,18 +64,7 @@
 
 
     <!-- Кнопка "На главную" -->
-    <div style="bottom: 40px">
-        <button class="btn_GoToTheClub" type="button" style="margin-top: 40px">
-            <strong>На главную</strong>
-            <div id="container-stars">
-                <div id="stars"></div>
-            </div>
-            <div id="glow">
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-        </button>
-    </div>
+    {% block href_main %}{% endblock %}
 
 
 </div>
