--- a/src/templates/profile_user.html
+++ b/src/templates/profile_user.html
@@ -58,3 +58,19 @@
     </textarea>
 </div>
 {% endblock %}
+
+
+{% block href_main %}
+<a href="/pages/main_user/{{user_info.id}}">
+    <button class="btn_GoToTheClub" type="button" style="margin-top: 20px">
+        <strong>На главную</strong>
+        <div id="container-stars">
+            <div id="stars"></div>
+        </div>
+        <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+    </button>
+</a>
+{% endblock %}
