update hrefs and fix local db

--- a/src/templates/profile_user.html
+++ b/src/templates/profile_user.html
@@ -61,7 +61,7 @@
 
 
 {% block href_main %}
-<a href="/pages/main_user/{id}?user_id={{user_info.id}}">
+<a href="/pages/main_user/{{user_info.id}}">
     <button class="btn_GoToTheClub" type="button" style="margin-top: 20px">
         <strong>На главную</strong>
         <div id="container-stars">
