worked with achivs and events

--- a/src/templates/main_user.html
+++ b/src/templates/main_user.html
@@ -11,7 +11,7 @@
 
 
 {% block exp_club %}
-{{ club_info.xp }}  <!--exp поменял на xp-->
+{{ club_info.xp }}
 {% endblock %}
 
 
@@ -38,7 +38,7 @@
 
 
 {% block money %}
-{{ user_x_club_info.balance }} <!-- money -> balance -->
+{{ user_x_club_info.balance }}
 {% endblock %}
 
 
