try POST requests

--- a/src/templates/profile_base.html
+++ b/src/templates/profile_base.html
@@ -58,7 +58,7 @@
             {% block Education %}{% endblock %}
             {% block UserInfo %}{% endblock %}
             <button type="button" class="editBtn" onclick="editForm()">Изменить</button>
-            <button type="button" class="saveBtn" style="display: none">Сохранить</button>
+            <button type="button" class="saveBtn" style="display: none" onclick="saveUserInfo()">Сохранить</button>
         </form>
     </div>
 
